<resources>
    <string name="app_name">Piclice</string>
    <string name="view">Slices</string>
    <string name="share_all">Share slices</string>
    <string name="choose_picture">Choose a picture ...</string>
    <string name="thumbnail">thumbnail</string>
    <string name="two">Two slices</string>
    <string name="three">Three slices</string>
    <string name="four">Four slices</string>
    <string name="five">More slices ...</string>
    <string name="slice_num">Number of slices</string>
    <string name="saved">Slices were saved to:\n%1$s</string>
    <string name="no_image">There is no picture in your Gallery!</string>
    <string name="deleted">Error: the picture was not found.</string>
    <string name="loading_more">...</string>
    <string name="crop_num">Number of slices</string>
    <string name="apply_cut">Slice it</string>
    <string name="invalid">Error: the value should be greater than zero.</string>
    <string name="resize_value">Size: 100%</string>
    <string name="loading_desc">Slicing ...</string>
    <string name="complete_cut">Slices are ready</string>
    <string name="see_slices">Share slices</string>
</resources>
