<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="200dp"
    android:background="@color/background_material_dark"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/main_dark"
        android:paddingTop="5dp"
        android:gravity="center"
        android:text="@string/slice_num"
        android:paddingBottom="5dp"/>

    <TextView
        android:id="@+id/resize_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:text="@string/resize_value"
        android:textColor="@color/white"/>

    <SeekBar
        android:id="@+id/resize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="90"
        android:progress="90"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:id="@+id/counters"
        android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/two"
            android:layout_width="200dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/two"/>

        <Button
            android:id="@+id/three"
            android:layout_width="200dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/three"/>

        <Button
            android:id="@+id/five"
            android:layout_width="200dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/five"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/more"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="200dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/more_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="5"
            android:inputType="number"
            android:hint="@string/crop_num"/>

        <TextView
            android:id="@+id/invalid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invalid"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:gravity="center"
            android:padding="5dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/done"
            android:layout_width="200dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/apply_cut"/>

    </LinearLayout>

</LinearLayout>