<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="240dp"
    android:background="@color/background_material_dark"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@color/main_dark"
        android:paddingTop="5dp"
        android:gravity="center"
        android:text="@string/complete_cut"
        android:paddingBottom="5dp"/>

    <TextView
        android:id="@+id/url_txt"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:lineSpacingExtra="5dp"
        android:textSize="14sp"
        android:text="@string/saved"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@color/dark">

        <Button
            android:id="@+id/done"
            android:layout_width="240dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/see_slices"/>

    </LinearLayout>

</LinearLayout>