<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:elevation="4dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/main"
        tools:ignore="UnusedAttribute">

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_marginLeft="14dp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:id="@+id/title_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/choose_picture"
                android:textColor="@color/subtext"
                android:textSize="14sp" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/container"
        android:background="@color/background_material_dark"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/no_image"/>

    <LinearLayout
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:gravity="center"
        android:orientation="vertical"
        android:clickable="true"
        android:background="@color/black_low_transparent">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminate="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:text="@string/loading_desc"/>

    </LinearLayout>

</RelativeLayout>
